--- a/springboot-demo/src/main/resources/application.yml
+++ b/springboot-demo/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 1607
+  port: 2345
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/javabatch
@@ -11,4 +11,18 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        fromat_sql: true
+        format_sql: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - '*'
+      base-path: /myactuator
+ # info:
+   # env:
+     # enabled: true
+logging:
+  level:
+    com:
+      zensar: debug
