--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -2,9 +2,15 @@ server:
   port: 4321
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/javabatch
+    url: jdbc:mysql://localhost:3306/mydb
     username: root
     password: root
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+  application:
+    name: product-service
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: true
