--- a/coupon-service/src/main/resources/application.yml
+++ b/coupon-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 7243
+  port: 1234
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/javabatch
@@ -7,4 +7,12 @@ spring:
     password: root
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+  application:
+    name: coupon-service
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: false
+    service-url:
+      defaultzone: http://localhost:8761/eureka
